@@ -1,5 +1,7 @@
 2020-11-28  Allen D. Ball  <ball@hcf.dev>
 
+	* Configure META-INF/services/jdk.javadoc.doclet.Taglet.
+
 	* src/main/java/ball/tools/javadoc/AbstractTaglet.java;
 	Interim check-in: Use Extern to construct external javadoc links
 	(currently fails due to ClassLoader issues).
